Layout fixes for the footer section. TimeNode now accepts React Elements besides strings., also corrected some issues with styling when the content was too short .Added some content to the career section.

--- a/components/timeline/Timeline.module.scss
+++ b/components/timeline/Timeline.module.scss
@@ -17,7 +17,7 @@
     ' circle text';
   @include mixins.mq(sm) {
     grid-template-areas: 'date circle text';
-    grid-template-columns: 10% auto auto;
+    grid-template-columns: 10% auto 90%;
   }
   .circle {
     grid-area: circle;
@@ -58,6 +58,10 @@
   }
   h3 {
     margin: 0;
+  }
+  a {
+    text-decoration: underline;
+    color: -webkit-link;
   }
   &:last-child > .text {
     padding-bottom: 1em;
