--- a/sections/layout/Footer.module.scss
+++ b/sections/layout/Footer.module.scss
@@ -2,20 +2,25 @@
 @use '@styles/mixins';
 @use '@styles/breakpoints';
 
-.container {
+.footer {
   display: none;
+  @include mixins.mq(sm) {
+    display: block;
+  }
   background-color: colors.$grey-black;
   & > * {
-    max-width: map-get(breakpoints.$breakpoints, 'sm');
+    max-width: map-get(breakpoints.$breakpoints, 'lg');
     margin: 0 auto;
   }
   padding: 2rem;
   small {
     color: colors.$grey;
   }
-  @include mixins.mq(sm) {
-    justify-content: space-between;
-    display: flex;
-    align-items: center;
+  .container {
+    @include mixins.mq(sm) {
+      justify-content: space-between;
+      display: flex;
+      align-items: center;
+    }
   }
 }
